--- a/booking.webestica.com/index.htm
+++ b/booking.webestica.com/index.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Booking - Multipurpose Online Booking Theme</title>
+	<title>Booking - Multipurpose Online boobies Theme</title>
 
 	<!-- Meta Tags -->
 	<meta charset="utf-8">
@@ -75,7 +75,7 @@
 	<!-- Google Font -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link rel="stylesheet" href="../fonts.googleapis.com/css2-family=DM+Sans-wght@400;500;700&family=Poppins-wght@400;500;700&display=swap.css" tppabs="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Poppins:wght@400;500;700&display=swap">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Poppins:wght@400;500;700&display=swap">
 
 	<!-- Plugins CSS -->
 	<link rel="stylesheet" type="text/css" href="assets/vendor/font-awesome/css/all.min.css" tppabs="https://booking.webestica.com/assets/vendor/font-awesome/css/all.min.css">
@@ -304,7 +304,7 @@
 						</a>
 						<ul class="dropdown-menu min-w-auto" data-bs-popper="none">
 							<li> 
-								<a class="dropdown-item" href="javascript:if(confirm('https://support.webestica.com/  \n\n¸ÃÎÄ¼þÎÞ·¨ÓÃ Teleport Ultra ÏÂÔØ, ÒòÎª ËüÊÇÒ»¸öÓò»òÂ·¾¶Íâ²¿±»ÉèÖÃÎªËüµÄÆôÊ¼µØÖ·µÄµØÖ·¡£  \n\nÄãÏëÔÚ·þÎñÆ÷ÉÏ´ò¿ªËü?'))window.location='https://support.webestica.com/'" tppabs="https://support.webestica.com/" target="_blank">
+								<a class="dropdown-item" href="javascript:if(confirm('https://support.webestica.com/  \n\nï¿½ï¿½ï¿½Ä¼ï¿½ï¿½Þ·ï¿½ï¿½ï¿½ Teleport Ultra ï¿½ï¿½ï¿½ï¿½, ï¿½ï¿½Îª ï¿½ï¿½ï¿½ï¿½Ò»ï¿½ï¿½ï¿½ï¿½ï¿½Â·ï¿½ï¿½ï¿½â²¿ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Îªï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ê¼ï¿½ï¿½Ö·ï¿½Äµï¿½Ö·ï¿½ï¿½  \n\nï¿½ï¿½ï¿½ï¿½ï¿½Ú·ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ï´ï¿½ï¿½ï¿½?'))window.location='https://support.webestica.com/'" tppabs="https://support.webestica.com/" target="_blank">
 									<i class="text-warning fa-fw bi bi-life-preserver me-2"></i>Support
 								</a> 
 							</li>
@@ -320,7 +320,7 @@
 								</a> 
 							</li>
 							<li> 
-								<a class="dropdown-item" href="javascript:if(confirm('https://themes.getbootstrap.com/store/webestica/  \n\n¸ÃÎÄ¼þÎÞ·¨ÓÃ Teleport Ultra ÏÂÔØ, ÒòÎª ËüÊÇÒ»¸öÓò»òÂ·¾¶Íâ²¿±»ÉèÖÃÎªËüµÄÆôÊ¼µØÖ·µÄµØÖ·¡£  \n\nÄãÏëÔÚ·þÎñÆ÷ÉÏ´ò¿ªËü?'))window.location='https://themes.getbootstrap.com/store/webestica/'" tppabs="https://themes.getbootstrap.com/store/webestica/" target="_blank">
+								<a class="dropdown-item" href="javascript:if(confirm('https://themes.getbootstrap.com/store/webestica/  \n\nï¿½ï¿½ï¿½Ä¼ï¿½ï¿½Þ·ï¿½ï¿½ï¿½ Teleport Ultra ï¿½ï¿½ï¿½ï¿½, ï¿½ï¿½Îª ï¿½ï¿½ï¿½ï¿½Ò»ï¿½ï¿½ï¿½ï¿½ï¿½Â·ï¿½ï¿½ï¿½â²¿ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Îªï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ê¼ï¿½ï¿½Ö·ï¿½Äµï¿½Ö·ï¿½ï¿½  \n\nï¿½ï¿½ï¿½ï¿½ï¿½Ú·ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ï´ï¿½ï¿½ï¿½?'))window.location='https://themes.getbootstrap.com/store/webestica/'" tppabs="https://themes.getbootstrap.com/store/webestica/" target="_blank">
 									<i class="text-success fa-fw bi bi-cloud-download-fill me-2"></i>Buy Booking!
 								</a> 
 							</li>
@@ -507,7 +507,7 @@ Main Banner START -->
 						<!-- Button -->
 						<a href="#" class="btn btn-primary-soft mb-0">Discover Now</a>
 						<!-- Story button -->
-						<a data-glightbox="" data-gallery="office-tour" href="javascript:if(confirm('https://www.youtube.com/embed/tXHviS-4ygo  \n\n¸ÃÎÄ¼þÎÞ·¨ÓÃ Teleport Ultra ÏÂÔØ, ÒòÎª ËüÊÇÒ»¸öÓò»òÂ·¾¶Íâ²¿±»ÉèÖÃÎªËüµÄÆôÊ¼µØÖ·µÄµØÖ·¡£  \n\nÄãÏëÔÚ·þÎñÆ÷ÉÏ´ò¿ªËü?'))window.location='https://www.youtube.com/embed/tXHviS-4ygo'" tppabs="https://www.youtube.com/embed/tXHviS-4ygo" class="d-block">
+						<a data-glightbox="" data-gallery="office-tour" href="javascript:if(confirm('https://www.youtube.com/embed/tXHviS-4ygo  \n\nï¿½ï¿½ï¿½Ä¼ï¿½ï¿½Þ·ï¿½ï¿½ï¿½ Teleport Ultra ï¿½ï¿½ï¿½ï¿½, ï¿½ï¿½Îª ï¿½ï¿½ï¿½ï¿½Ò»ï¿½ï¿½ï¿½ï¿½ï¿½Â·ï¿½ï¿½ï¿½â²¿ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Îªï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ê¼ï¿½ï¿½Ö·ï¿½Äµï¿½Ö·ï¿½ï¿½  \n\nï¿½ï¿½ï¿½ï¿½ï¿½Ú·ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ï´ï¿½ï¿½ï¿½?'))window.location='https://www.youtube.com/embed/tXHviS-4ygo'" tppabs="https://www.youtube.com/embed/tXHviS-4ygo" class="d-block">
 							<!-- Avatar -->
 							<div class="avatar avatar-md z-index-1 position-relative me-2">
 								<img class="avatar-img rounded-circle" src="assets/images/avatar/12.jpg" tppabs="https://booking.webestica.com/assets/images/avatar/12.jpg" alt="avatar">
@@ -1759,7 +1759,7 @@ Footer START -->
 			<div class="container">
 				<div class="d-lg-flex justify-content-between align-items-center py-3 text-center text-lg-start">
 					<!-- copyright text -->
-					<div class="text-muted text-primary-hover"> Copyrights Â©2023 Booking. Build by <a href="javascript:if(confirm('https://www.webestica.com/  \n\n¸ÃÎÄ¼þÎÞ·¨ÓÃ Teleport Ultra ÏÂÔØ, ÒòÎª ËüÊÇÒ»¸öÓò»òÂ·¾¶Íâ²¿±»ÉèÖÃÎªËüµÄÆôÊ¼µØÖ·µÄµØÖ·¡£  \n\nÄãÏëÔÚ·þÎñÆ÷ÉÏ´ò¿ªËü?'))window.location='https://www.webestica.com/'" tppabs="https://www.webestica.com/" class="text-muted">Webestica</a>. </div>
+					<div class="text-muted text-primary-hover"> Copyrights Â©2023 Booking. Build by <a href="javascript:if(confirm('https://www.webestica.com/  \n\nï¿½ï¿½ï¿½Ä¼ï¿½ï¿½Þ·ï¿½ï¿½ï¿½ Teleport Ultra ï¿½ï¿½ï¿½ï¿½, ï¿½ï¿½Îª ï¿½ï¿½ï¿½ï¿½Ò»ï¿½ï¿½ï¿½ï¿½ï¿½Â·ï¿½ï¿½ï¿½â²¿ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Îªï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ê¼ï¿½ï¿½Ö·ï¿½Äµï¿½Ö·ï¿½ï¿½  \n\nï¿½ï¿½ï¿½ï¿½ï¿½Ú·ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ï´ï¿½ï¿½ï¿½?'))window.location='https://www.webestica.com/'" tppabs="https://www.webestica.com/" class="text-muted">Webestica</a>. </div>
 					<!-- copyright links-->
 					<div class="nav mt-2 mt-lg-0">
 						<ul class="list-inline text-primary-hover mx-auto mb-0">
