Added a new section at the homepage.

--- a/booking.webestica.com/basetao.html
+++ b/booking.webestica.com/basetao.html
@@ -169,16 +169,15 @@
                                         <!-- Notification item -->
                                         <li>
                                             <a href="#" class="list-group-item list-group-item-action rounded notif-unread border-0 mb-1 p-3">
-                                                <h6 class="mb-2">New! Booking flights from New York ✈️</h6>
-                                                <p class="mb-0 small">Find the flexible ticket on flights around the world. Start searching today</p>
-                                                <span>Wednesday</span>
+                                                <h6 class="mb-2">Your item has arrived!</h6>
+                                                <p class="mb-0 small">Item #753048 has arrived at our warehouse.</p>
                                             </a>
                                         </li>
                                         <!-- Notification item -->
                                         <li>
-                                            <a href="#" class="list-group-item list-group-item-action rounded border-0 mb-1 p-3">
-                                                <h6 class="mb-2">Sunshine saving are here 🌞 save 30% or more on a stay</h6>
-                                                <span>15 Nov 2022</span>
+                                            <a href="#" class="list-group-item list-group-item-action rounded notif-unread border-0 mb-1 p-3">
+                                                <h6 class="mb-2">New message</h6>
+                                                <p class="mb-0 small">A new message has been posted at shipment #141363.</p>
                                             </a>
                                         </li>
                                     </ul>
