Clickable menu + make a parcel page.

--- a/website/index.html
+++ b/website/index.html
@@ -524,9 +524,6 @@
         <div class="modal-content">
             <div class="modal-body">
                 <div class="p-4 p-sm-5">
-                    <a href="index.html">
-                        <img class="h-50px mb-4" src="assets/images/logo.svg" alt="logo">
-                    </a>
                     <h1 class="mb-2 h3">Welcome back</h1>
 					<p class="mb-0">New here?<a href="#" data-bs-target="#registerModal" data-bs-toggle="modal" data-bs-dismiss="modal"> Create an account</a></p>
                     <form class="mt-4 text-start">
@@ -633,11 +630,11 @@ Footer START -->
 					<div class="col-12 col-md-3">
 						<h5 class="text-white mb-2 mb-md-4">Policy</h5>
 						<ul class="nav flex-column text-primary-hover">
-							<li class="nav-item"><a class="nav-link text-muted" href="#">After sale service</a></li>
-							<li class="nav-item"><a class="nav-link text-muted" href="#">Storage</a></li>
-							<li class="nav-item"><a class="nav-link text-muted" href="#">Customs & tax</a></li>
-							<li class="nav-item"><a class="nav-link text-muted" href="#">Insurance</a></li>
-                            <li class="nav-item"><a class="nav-link text-muted" href="#">Return</a></li>
+							<li class="nav-item"><a class="nav-link text-muted" href="after_sale_service.html">After sale service</a></li>
+							<li class="nav-item"><a class="nav-link text-muted" href="storage.html">Storage</a></li>
+							<li class="nav-item"><a class="nav-link text-muted" href="customs_tax.html">Customs & tax</a></li>
+							<li class="nav-item"><a class="nav-link text-muted" href="insurance.html">Insurance</a></li>
+                            <li class="nav-item"><a class="nav-link text-muted" href="return.html">Return</a></li>
 						</ul>
 					</div>
 
@@ -646,7 +643,7 @@ Footer START -->
 						<h5 class="text-white mb-2 mb-md-4">Contact</h5>
 						<ul class="nav flex-column text-primary-hover">
 							<li class="nav-item"><a class="nav-link text-muted" href="#"><i class="bi bi-geo-alt me-2"></i>East lst street JiangXia Guangzhou China, GZ 510420</a></li>
-							<li class="nav-item"><a class="nav-link text-muted" href="#"><i class="bi bi-envelope me-2"></i>basetao2you@vip.163.com</a></li>
+							<li class="nav-item"><a class="nav-link text-muted" href="mailto:basetao2you@vip.163.com"><i class="bi bi-envelope me-2"></i>basetao2you@vip.163.com</a></li>
 						</ul>
 					</div>
 
@@ -656,8 +653,8 @@ Footer START -->
 						<ul class="nav flex-column text-primary-hover">
 							<li class="nav-item"><a class="nav-link text-muted" href="#"><i class="bi bi-clock me-2"></i>Service times:</a></li>
 							<li class="nav-item"><a class="nav-link text-muted" href="#"><time id="start-time"></time> ~ <time id="end-time"></time> Mo-Sa</a></li>
-							<li class="nav-item"><a class="nav-link text-muted" href="#"><i class="fa-solid fa-box me-2"></i>Tracking</a></li>
-                            <li class="nav-item"><a class="nav-link text-muted" href="#"><i class="fa-solid fa-calculator me-2"></i>Cost calculator</a></li>
+							<li class="nav-item"><a class="nav-link text-muted" href="https://17track.net/en"><i class="fa-solid fa-box me-2"></i>Tracking</a></li>
+                            <li class="nav-item"><a class="nav-link text-muted" href="cost_calculator.html"><i class="fa-solid fa-calculator me-2"></i>Cost calculator</a></li>
 						</ul>
 					</div>
 				</div>
@@ -678,8 +675,8 @@ Footer START -->
 					<!-- copyright links-->
 					<div class="nav mt-2 mt-lg-0">
 						<ul class="list-inline text-primary-hover mx-auto mb-0">
-							<li class="list-inline-item me-0"><a class="nav-link py-1 text-muted" href="#">Privacy policy</a></li>
-							<li class="list-inline-item me-0"><a class="nav-link py-1 text-muted" href="#">Terms and conditions</a></li>
+							<li class="list-inline-item me-0"><a class="nav-link py-1 text-muted" href="privacy_policy.html">Privacy policy</a></li>
+							<li class="list-inline-item me-0"><a class="nav-link py-1 text-muted" href="terms_and_conditions.html">Terms and conditions</a></li>
 						</ul>
 					</div>
 				</div>
