--- a/website/self_help_order.html
+++ b/website/self_help_order.html
@@ -143,7 +143,7 @@
                             <ul class="dropdown-menu" aria-labelledby="pageMenu">
                                 <!-- Dropdown submenu -->
                                 <li> <a class="dropdown-item" href="ship_works.html">How it works</a></li>
-                                <li> <a class="dropdown-item" href="#">Make a parcel</a></li>
+                                <li> <a class="dropdown-item" href="make_a_parcel.html">Make a parcel</a></li>
                             </ul>
                         </li>
 
@@ -152,10 +152,10 @@
                             <a class="nav-link dropdown-toggle" href="#" id="pageMenu" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Help center</a>
                             <ul class="dropdown-menu" aria-labelledby="pageMenu">
                                 <!-- Dropdown submenu -->
-                                <li> <a class="dropdown-item" href="#">FAQ</a></li>
-                                <li> <a class="dropdown-item" href="#">Search for me</a></li>
-                                <li> <a class="dropdown-item" href="#">Mail issue</a></li>
-                                <li> <a class="dropdown-item" href="#">Cost calculator</a></li>
+                                <li> <a class="dropdown-item" href="faq.html">FAQ</a></li>
+                                <li> <a class="dropdown-item" href="search_for_me.html">Search for me</a></li>
+                                <li> <a class="dropdown-item" href="mail_issue.html">Mail issue</a></li>
+                                <li> <a class="dropdown-item" href="cost_calculator.html">Cost calculator</a></li>
                             </ul>
                         </li>
                         <!-- Nav Search START -->
@@ -426,11 +426,11 @@ Footer START -->
 					<div class="col-12 col-md-3">
 						<h5 class="text-white mb-2 mb-md-4">Policy</h5>
 						<ul class="nav flex-column text-primary-hover">
-							<li class="nav-item"><a class="nav-link text-muted" href="#">After sale service</a></li>
-							<li class="nav-item"><a class="nav-link text-muted" href="#">Storage</a></li>
-							<li class="nav-item"><a class="nav-link text-muted" href="#">Customs & tax</a></li>
-							<li class="nav-item"><a class="nav-link text-muted" href="#">Insurance</a></li>
-                            <li class="nav-item"><a class="nav-link text-muted" href="#">Return</a></li>
+							<li class="nav-item"><a class="nav-link text-muted" href="after_sale_service.html">After sale service</a></li>
+							<li class="nav-item"><a class="nav-link text-muted" href="storage.html">Storage</a></li>
+							<li class="nav-item"><a class="nav-link text-muted" href="customs_tax.html">Customs & tax</a></li>
+							<li class="nav-item"><a class="nav-link text-muted" href="insurance.html">Insurance</a></li>
+                            <li class="nav-item"><a class="nav-link text-muted" href="return.html">Return</a></li>
 						</ul>
 					</div>
 
@@ -439,7 +439,7 @@ Footer START -->
 						<h5 class="text-white mb-2 mb-md-4">Contact</h5>
 						<ul class="nav flex-column text-primary-hover">
 							<li class="nav-item"><a class="nav-link text-muted" href="#"><i class="bi bi-geo-alt me-2"></i>East lst street JiangXia Guangzhou China, GZ 510420</a></li>
-							<li class="nav-item"><a class="nav-link text-muted" href="#"><i class="bi bi-envelope me-2"></i>basetao2you@vip.163.com</a></li>
+							<li class="nav-item"><a class="nav-link text-muted" href="mailto:basetao2you@vip.163.com"><i class="bi bi-envelope me-2"></i>basetao2you@vip.163.com</a></li>
 						</ul>
 					</div>
 
@@ -449,8 +449,8 @@ Footer START -->
 						<ul class="nav flex-column text-primary-hover">
 							<li class="nav-item"><a class="nav-link text-muted" href="#"><i class="bi bi-clock me-2"></i>Service times:</a></li>
 							<li class="nav-item"><a class="nav-link text-muted" href="#"><time id="start-time"></time> ~ <time id="end-time"></time> Mo-Sa</a></li>
-							<li class="nav-item"><a class="nav-link text-muted" href="#"><i class="fa-solid fa-box me-2"></i>Tracking</a></li>
-                            <li class="nav-item"><a class="nav-link text-muted" href="#"><i class="fa-solid fa-calculator me-2"></i>Cost calculator</a></li>
+							<li class="nav-item"><a class="nav-link text-muted" href="https://17track.net/en"><i class="fa-solid fa-box me-2"></i>Tracking</a></li>
+                            <li class="nav-item"><a class="nav-link text-muted" href="cost_calculator.html"><i class="fa-solid fa-calculator me-2"></i>Cost calculator</a></li>
 						</ul>
 					</div>
 				</div>
@@ -471,8 +471,8 @@ Footer START -->
 					<!-- copyright links-->
 					<div class="nav mt-2 mt-lg-0">
 						<ul class="list-inline text-primary-hover mx-auto mb-0">
-							<li class="list-inline-item me-0"><a class="nav-link py-1 text-muted" href="#">Privacy policy</a></li>
-							<li class="list-inline-item me-0"><a class="nav-link py-1 text-muted" href="#">Terms and conditions</a></li>
+							<li class="list-inline-item me-0"><a class="nav-link py-1 text-muted" href="privacy_policy.html">Privacy policy</a></li>
+							<li class="list-inline-item me-0"><a class="nav-link py-1 text-muted" href="terms_and_conditions.html">Terms and conditions</a></li>
 						</ul>
 					</div>
 				</div>
