--- a/website/make_a_parcel.html
+++ b/website/make_a_parcel.html
@@ -129,21 +129,21 @@
                         
                         <!-- Nav item -->
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle active" href="#" id="pageMenu" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Buy for me</a>
+                            <a class="nav-link dropdown-toggle" href="#" id="pageMenu" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Buy for me</a>
                             <ul class="dropdown-menu" aria-labelledby="pageMenu">
                                 <!-- Dropdown submenu -->
-                                <li> <a class="dropdown-item active" href="buy_works.html">How it works</a></li>
+                                <li> <a class="dropdown-item" href="buy_works.html">How it works</a></li>
                                 <li> <a class="dropdown-item" href="self_help_order.html">Self-help order</a></li>
                             </ul>
                         </li>
 
                         <!-- Nav item -->
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="pageMenu" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Ship for me</a>
+                            <a class="nav-link dropdown-toggle active" href="#" id="pageMenu" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Ship for me</a>
                             <ul class="dropdown-menu" aria-labelledby="pageMenu">
                                 <!-- Dropdown submenu -->
                                 <li> <a class="dropdown-item" href="ship_works.html">How it works</a></li>
-                                <li> <a class="dropdown-item" href="make_a_parcel.html">Make a parcel</a></li>
+                                <li> <a class="dropdown-item active" href="make_a_parcel.html">Make a parcel</a></li>
                             </ul>
                         </li>
 
@@ -310,7 +310,7 @@
                     <div class="bg-light p-4 rounded-3 position-relative text-center">
                         <h1 class="mb-md-5 mt-md-5 display-5">
                             <span class="position-relative z-index-9">
-                                How it works
+                                Make a parcel
                             </span>
                             <span class="position-absolute top-50 start-50 translate-middle d-none d-md-block mt-4">
                                 <svg width="445.5px" height="21.5px" viewBox="0 0 445.5 21.5">
@@ -322,24 +322,71 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-10 mx-auto">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent congue, nulla sit amet lobortis posuere, lectus mauris aliquet libero, et blandit purus nulla a sem. Cras semper molestie nibh, eu lobortis magna convallis et. Ut porta elit vitae augue tincidunt sodales. Curabitur et mi maximus, mattis quam sed, ultricies nibh. Vivamus nunc diam, lobortis nec augue nec, porta auctor sem. Sed sapien orci, rutrum ultrices arcu quis, placerat consectetur tellus. Curabitur et dolor ultrices, dapibus nisi vitae, volutpat metus. Aliquam ac ultrices orci. Donec pretium magna nec orci pellentesque, at tincidunt nisl egestas. Proin lacus dui, volutpat ac augue nec, aliquam ultricies magna. Nunc nisi neque, tincidunt vitae lacus sed, aliquet pretium tellus. Mauris a consequat dolor.</p>
-                </div>
-            </div>
-            <div class="row">
                 <div class="col-12 mb-4">
-                    <div class="bg-light rounded d-md-flex justify-content-between align-items-center text-center p-3 mt-4">
-                        <!-- Title -->
-                        <h6 class="mb-0">Was this article helpful?</h6>
-                        <small class="py-3 p-md-0 d-block">25 out of 78 found this helpful</small>
-                        <!-- Check buttons -->
-                        <div class="btn-group" role="group" aria-label="Basic radio toggle button group">
-                            <!-- Yes button -->
-                            <input type="radio" class="btn-check" name="btnradio" id="btnradio1" control-id="ControlID-1">
-                            <label class="btn btn-outline-secondary btn-sm mb-0" for="btnradio1"><i class="fa-regular fa-thumbs-up me-1"></i> Yes</label>
-                            <!-- No button -->
-                            <input type="radio" class="btn-check" name="btnradio" id="btnradio2" control-id="ControlID-2">
-                            <label class="btn btn-outline-secondary btn-sm mb-0" for="btnradio2"> No <i class="fa-regular fa-thumbs-down ms-1"></i></label>
+                    <div class="bg-light position-relative overflow-hidden p-4 p-sm-5 rounded-3">
+                        <figure class="position-absolute translate-middle">
+                            <svg class="fill-orange" width="250px" height="255px" viewBox="0 0 300.24 305.85">
+                                <path d="M72.33,265.03c-41.74-43.54-67.69-97.8-72.24-159.79C-2.45,59.51,47.02,6.52,101.33,1.31 c61.88-6.72,117.52,12.02,155.39,64.52c16.58,23.1,27.89,49.78,35.88,75.54c18.39,55.77,2.61,105.79-37.18,136.4 c-45.06,34.18-108.2,37.69-155.75,7.58C90.6,279.3,82.55,272.11,72.33,265.03z"></path>
+                            </svg>
+                        </figure>
+                        <figure class="position-absolute top-90 start-100 translate-middle">
+                            <svg class="fill-warning" width="177.91px" height="132.35px" viewBox="0 0 177.91 132.35">
+                                <path d="M128.84,69.77c2.74,3.33,2.92,6.79,0.71,10.54c0.77,0,1.31,0,1.79,0c7.56,0,15.12,0.3,22.68,1.13 c4.94,0.54,9.82,1.31,14.52,2.86c1.73,0.54,3.39,1.25,5,2.08c1.07,0.54,2.08,1.37,2.92,2.26c1.85,2.02,1.9,4.7,0.36,6.96 c-0.83,1.25-1.96,2.26-3.21,2.98c-2.2,1.25-4.4,2.44-6.73,3.45c-6.25,2.74-12.74,4.82-19.23,6.79c-7.98,2.44-15.95,4.76-23.93,7.14 c-0.48,0.12-1.01,0.3-1.73,0.54c0.54,0.3,0.89,0.48,1.25,0.65c1.43,0.77,2.44,1.85,2.5,3.51c0.06,1.79-0.83,3.04-2.32,3.81 c-1.19,0.6-2.56,1.13-3.87,1.49c-5.3,1.49-10.71,2.32-16.13,3.15c-10.36,1.55-20.77,2.62-31.25,3.04 c-8.93,0.36-17.8,0.36-26.67-1.01c-3.33-0.54-6.67-1.25-9.76-2.56c-1.67-0.71-3.27-1.55-4.64-2.8c-3.15-2.8-3.87-6.61-1.9-10.36 c1.01-1.9,2.44-3.51,4.05-4.94c3.15-2.8,6.79-4.94,10.48-6.85c0.6-0.3,1.25-0.65,1.85-1.19c-0.36,0-0.71,0-1.01,0 c-6.07,0.3-12.2,0.36-18.27-0.48c-2.74-0.36-5.42-0.95-8.04-2.02c-1.85-0.77-3.63-1.73-5.06-3.15c-2.62-2.62-3.45-5.71-2.5-9.29 c0.54-2.02,1.49-3.81,2.92-5.36c1.67-1.85,3.33-3.69,5.24-5.24c3.15-2.56,6.49-4.82,9.76-7.26c0.48-0.36,0.89-0.65,1.67-1.25 c-0.71-0.06-1.07-0.12-1.49-0.12c-3.57,0-7.14,0.06-10.71-0.12c-1.96-0.06-3.99-0.42-5.95-0.83c-1.19-0.24-2.38-0.71-3.45-1.31 C4.91,64,3.6,60.3,5.15,56.32c0.83-2.14,2.26-3.93,3.87-5.6c0.54-0.6,1.13-1.13,1.85-1.85c-0.48-0.06-0.77-0.12-1.07-0.12 c-1.37-0.06-2.74-0.06-4.11-0.24c-0.95-0.12-1.96-0.42-2.86-0.83c-2.56-1.25-3.51-3.93-2.32-6.49c0.48-1.01,1.19-2.02,1.96-2.74 c1.49-1.31,3.04-2.62,4.76-3.63c3.51-2.02,7.02-3.99,10.71-5.71c5.6-2.44,11.19-4.7,16.73-7.08c0.95-0.42,1.96-0.83,2.86-1.37 c8.04-4.94,16.73-8.51,25.65-11.31c14.64-4.64,29.64-7.62,45-8.93c6.19-0.54,12.38-0.65,18.51,0.18c2.38,0.3,4.7,0.77,6.9,1.79 c1.13,0.54,2.32,1.13,3.27,1.96c2.38,1.96,2.98,5,1.49,7.74c-0.6,1.13-1.37,2.2-2.32,3.04c-1.96,1.79-4.05,3.45-6.25,4.94 c-4.35,2.98-8.99,5.42-13.63,7.8c-0.48,0.24-0.89,0.48-1.37,1.01c0.6,0.06,1.13,0.12,1.73,0.24c1.13,0.24,2.26,0.42,3.33,0.77 c4.11,1.49,4.88,5.48,1.67,8.39c-1.01,0.89-2.2,1.73-3.39,2.38c-2.62,1.43-5.36,2.74-8.04,3.99c-2.38,1.07-4.76,2.08-7.2,3.33 c0.36,0.06,0.77,0.12,1.13,0.12c6.49,0.3,12.92,0.77,19.29,1.9c3.33,0.6,6.67,1.25,9.82,2.56c1.37,0.6,2.8,1.25,3.99,2.14 c3.1,2.32,3.39,5.95,0.83,8.87c-0.83,0.89-1.79,1.73-2.8,2.44c-1.67,1.13-3.45,2.02-5.18,3.04 C129.67,69.29,129.32,69.53,128.84,69.77z"></path>
+                            </svg>
+                        </figure>
+                        <div class="row g-4">
+                            <!-- Card START -->
+                            <div class="col-12">
+                                <div class="card card-body p-4 mb-4">
+                                    <h5>Please notice</h5>
+                                    <p class="mb-0">Kindly request the seller to provide you with the tracking code prior to dispatching my order.</p>
+                                    <p class="mb-0">Once the package arrives at our warehouse, we will update its weight and provide QC pictures.</p>
+                                    <p class="mb-0">It is possible to consolidate your Ship for Me orders with your Buy for Me orders for shipment.</p>
+                                </div>
+                                <div class="card card-body p-4">
+                                    <h5>Parcel information</h5>
+                                    <form class="row">
+                                        <div class="form-group col-md-3">
+                                            <label for="itemprice">Product name<span class="text-danger">*</span></label>
+                                            <input type="text" class="form-control" placeholder="78" id="itemprice">
+                                        </div>
+                                        <div class="form-group col-md-4">
+                                            <label for="itemquantity">Quantity<span class="text-danger">*</span></label>
+                                            <div class="input-group">
+                                                <button class="btn btn-primary" name="minus" type="button">-</button>
+                                                <input type="text" class="form-control text-center" value="1" readonly>
+                                                <button class="btn btn-primary" name="plus" type="button">+</button>
+                                            </div>
+                                        </div>
+                                        <div class="form-group col-md-2">
+                                            <label for="itemshipping">Delivery company<span class="text-danger">*</span></label>
+                                            <select class="form-select" aria-label="Default select example">
+                                                <option selected>EMS</option>
+                                                <option value="1">One</option>
+                                                <option value="2">Two</option>
+                                                <option value="3">Three</option>
+                                            </select>
+                                        </div>
+                                        <div class="form-group col-md-2">
+                                            <label for="itemsize">Tracking code<span class="text-danger">*</span></label>
+                                            <input type="text" class="form-control" placeholder="16755635" id="itemsize">
+                                        </div>
+                                        <div class="form-group col-md-1 mb-2">
+                                            <label for="itemcolor">Action</label>
+                                            <button class="btn btn-danger-soft form-control"><i class="bi bi-trash3-fill"></i></button>
+                                        </div>
+                                        <div class="form-group mb-4">
+                                            <label for="exampleFormControlTextarea1" class="form-label">Add your note about the product</label>
+                                            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                                        </div>
+                                        <p class="text-center">
+                                            <button class="btn btn-success-soft me-3">Add a parcel <i class="fa-solid fa-plus"></i></button>
+                                            <button class="btn btn-primary-soft">Add to cart <i class="bi bi-cart-fill"></i></button>
+                                        </p>
+                                    </form>
+                                </div>
+                            </div>
+                            <!-- Card END -->
                         </div>
                     </div>
                 </div>
