Login/register/forgot pw update + TOS update.

--- a/website/buy_works.html
+++ b/website/buy_works.html
@@ -423,7 +423,7 @@ Footer START -->
 					<div class="nav mt-2 mt-lg-0">
 						<ul class="list-inline text-primary-hover mx-auto mb-0">
 							<li class="list-inline-item me-0"><a class="nav-link py-1 text-muted" href="privacy_policy.html">Privacy policy</a></li>
-							<li class="list-inline-item me-0"><a class="nav-link py-1 text-muted" href="terms_and_conditions.html">Terms and conditions</a></li>
+							<li class="list-inline-item me-0"><a class="nav-link py-1 text-muted" href="terms_and_conditions.html">Terms of service</a></li>
 						</ul>
 					</div>
 				</div>
