--- a/website/privacy_policy.html
+++ b/website/privacy_policy.html
@@ -350,7 +350,14 @@
 							<h4 class="card-title mb-0">How we use your information</h4>
 						</div>
 						<div class="card-body px-0">
-							<p></p>
+							<p>Basetao gathers information to comprehend your requirements and preferences, enabling it to deliver improved services. For instance, Basetao could utilize your data to...</p>
+                            <ul>
+                                <li>complete a transaction or order.</li>
+                                <li>allow you to participate in surveys and promotions.</li>
+                                <li>prevent and detect fraud or other malicious activity.</li>
+                                <li>improve or update our services.</li>
+                                <li>help you solve some problems concerning our service or website.</li>
+                            </ul>
 						</div>
 					</div>
                     <div class="card p-0 bg-transparent">
@@ -358,7 +365,12 @@
 							<h4 class="card-title mb-0">How we share your information</h4>
 						</div>
 						<div class="card-body px-0">
-							<p></p>
+							<p>Basetao might disclose personal information to...</p>
+                            <ul>
+                                <li>our service providers who assist us in providing this Web Site and our services (for example internet and technology service providers, mail houses, delivery companies).</li>
+                                <li>organizations with whom we have co-promotional arrangements (and any agents used in administering such arrangements).</li>
+                            </ul>
+                            <p>Basetao refrains from furnishing your personal information to third-party entities for their marketing endeavors. Your personal information will not be sold, rented, or leased to anyone, except as elucidated in this statement.</p>
 						</div>
 					</div>
                     <div class="card p-0 bg-transparent">
@@ -366,7 +378,7 @@
 							<h4 class="card-title mb-0">Links to external websites</h4>
 						</div>
 						<div class="card-body px-0">
-							<p></p>
+							<p>This website might include hyperlinks to third-party websites, which may possess their privacy policies or statements. It is the responsibility of those third-party websites, and not Basetao, to inform you about their security and privacy practices.</p>
 						</div>
 					</div>
                     <div class="card p-0 bg-transparent">
@@ -374,7 +386,7 @@
 							<h4 class="card-title mb-0">Security</h4>
 						</div>
 						<div class="card-body px-0">
-							<p></p>
+							<p>At Basetao, we highly regard your personal information and exert significant effort to safeguard its security. Nevertheless, it's important to note that no data transmission over the internet can be guaranteed to be completely secure. Basetao cannot guarantee or warrant 100% security of your information. While we will strive to protect your information to the best of our ability, you assume the risk for any potential security breaches.</p>
 						</div>
 					</div>
                     <div class="card p-0 bg-transparent">
@@ -382,15 +394,15 @@
 							<h4 class="card-title mb-0">Changes to this statement</h4>
 						</div>
 						<div class="card-body px-0">
-							<p></p>
+							<p>Basetao will publish any revisions made to this Privacy Statement on this website. We advise that you periodically review our Privacy Statement for updates. Our website adheres to the laws of the UK.</p>
 						</div>
 					</div>
-                    <div class="card p-0 bg-transparent">
+                    <div class="card p-0 bg-transparent mb-5">
 						<div class="card-header border-bottom bg-transparent px-0">
 							<h4 class="card-title mb-0">Contact details</h4>
 						</div>
 						<div class="card-body px-0">
-							<p></p>
+							<p>Should you have any queries or feedback regarding our Privacy Statement, please feel free to send an email to basetao2you@163.com.</p>
 						</div>
 					</div>
                 </div>
@@ -474,7 +486,7 @@ Footer START -->
 					<div class="nav mt-2 mt-lg-0">
 						<ul class="list-inline text-primary-hover mx-auto mb-0">
 							<li class="list-inline-item me-0"><a class="nav-link py-1 text-muted" href="privacy_policy.html">Privacy policy</a></li>
-							<li class="list-inline-item me-0"><a class="nav-link py-1 text-muted" href="terms_and_conditions.html">Terms and conditions</a></li>
+							<li class="list-inline-item me-0"><a class="nav-link py-1 text-muted" href="terms_and_conditions.html">Terms of service</a></li>
 						</ul>
 					</div>
 				</div>
