Added the new logo + cost calculator.

--- a/website/privacy_policy.html
+++ b/website/privacy_policy.html
@@ -397,7 +397,7 @@
 							<p>Basetao will publish any revisions made to this Privacy Statement on this website. We advise that you periodically review our Privacy Statement for updates. Our website adheres to the laws of the UK.</p>
 						</div>
 					</div>
-                    <div class="card p-0 bg-transparent mb-5">
+                    <div class="card p-0 bg-transparent mb-md-5">
 						<div class="card-header border-bottom bg-transparent px-0">
 							<h4 class="card-title mb-0">Contact details</h4>
 						</div>
