--- a/website/terms_and_conditions.html
+++ b/website/terms_and_conditions.html
@@ -356,7 +356,16 @@
 							<h4 class="card-title mb-0">General prohibitions</h4>
 						</div>
 						<div class="card-body px-0">
-							<p></p>
+							<p>To be able to use the Service, you must agree not to:</p>
+                            <ul>
+                                <li>Upload, post, email, transmit, or make available any Content that is illegal, harmful, threatening, abusive, harassing, tortious, defamatory, vulgar, obscene, libelous, invasive of someone's privacy, hateful, or racially, ethnically, or otherwise offensive.</li>
+                                <li>Upload, post, email, transmit, or make available any advertising, promotional materials, "junk mail," "spam," "chain letters," "pyramid schemes," or any other type of solicitation, unless it is allowed in designate areas like shopping. Any unsolicited or unauthorized solicitation is strictly prohibited, and if you are caught doing so, you will be promptly banned from the Service.</li>
+                                <li>Upload, post, email, transmit, or make available any material that contains software viruses or any other computer code, files, or programs intended to interrupt, destroy, or limit the functionality of any computer software, hardware, or telecommunications equipment.</li>
+                                <li>Upload, post, email, or transmit any content that: (i) you are not legally authorized to copy, transmit, distribute, or display; (ii) you do not have the consent or permission of each identifiable person in the content to use their name, voice, signature, photograph, or likeness; (iii) infringes or misappropriates the intellectual property rights or violates the privacy rights of any third party (including, but not limited to, copyright, trademark, patent, trade secret, or other intellectual property right, or moral right or right of publicity); (iv) is false or misleading; (v) is defamatory; (vi) is obscene, pornographic, or offensive; (vii) promotes bigotry, racism, hatred, or harm against any individual or group; or (viii) violates or encourages any conduct that would violate any applicable law or regulation or give rise to civil liability.</li>
+                                <li>Harm or threaten to harm other users in any way, nor interfere with or attempt to interfere with the access of any user, host, or network, including, but not limited to, by sending a virus, overloading, flooding, spamming, or mail-bombing the Service.</li>
+                                <li>Impersonate or misrepresent your affiliation with any person or entity.</li>
+                            </ul>
+                            <p>Basetao has the right to investigate and take legal action against any violations of the above terms, including possible infringement of intellectual property rights and security breaches, to the fullest extent of the law. Basetao may involve and cooperate with law enforcement authorities in prosecuting users who violate this Agreement. Although Basetao has no obligation to monitor your access to or use of the Service, it has the right to do so for the purpose of operating the Service, ensuring your compliance with this Agreement, or complying with applicable laws or court orders. Basetao reserves the right at all times to disclose any User Files, in its sole discretion, as necessary to (a) comply with any law, regulation, or governmental request or (b) reduce or prevent what Basetao considers to be, in its sole discretion, a serious or imminent threat to your health or safety, or the health or safety of another.</p>
 						</div>
 					</div>
                     <div class="card p-0 bg-transparent">
@@ -383,7 +392,7 @@
 							<p>Basetao reserves the right to modify our site, policies, and these Terms of Use at any time. If any of these terms are considered invalid, void, or unenforceable for any reason, that term will be considered severable and will not affect the validity or enforceability of any remaining conditions.</p>
 						</div>
 					</div>
-                    <div class="card p-0 bg-transparent">
+                    <div class="card p-0 bg-transparent mb-md-5">
 						<div class="card-header border-bottom bg-transparent px-0">
 							<h4 class="card-title mb-0">Governing law</h4>
 						</div>
